Sat Jun 27 12:45:22 GMT 2015  Olly Betts <olly@survex.com>

	* src/mainfrm.cc: Use wxAtof() to get double from wxString.

Sat Jun 27 12:44:04 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc,src/mainfrm.cc: Use wxFopen() rather than
	  conditionally calling fopen() or _wfopen() depending on the platform.

Sat Jun 27 12:42:57 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Create wxFileInputStream directly, avoiding
	  intermediate file descriptor.

Sat Jun 27 12:41:32 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc: Use wxGetenv() to read the SURVEXEDITOR variable,
	  so we can accept Unicode values on Windows.

Sat Jun 27 06:51:29 GMT 2015  Olly Betts <olly@survex.com>

	* src/netskel.c: Fix use after free after *solve.  This only occurs if
	  a leg between the two exact same stations appears right before and
	  right after the *solve, which is unlikely in real data, but the
	  testsuite has an instance of this.  This was introduced by the repeat
	  leg averaging added in 1.2.17.

Sat Jun 27 06:49:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/netartic.c: Fix small memory leak when solving network.  This
	  doesn't really matter when solving at the end of processing as cavern
	  will exit after that, but if *solve is used we continue processing
	  after solving.

Sat Jun 27 04:36:39 GMT 2015  Olly Betts <olly@survex.com>

	* src/message.c: Fix comment typo.

Fri Jun 26 00:42:07 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: More updates for 1.2.20.

Fri Jun 26 00:05:51 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc,src/gfxcore.h,src/mainfrm.cc: Add support for reading
	  DEM data which isn't in a .zip file.

Thu Jun 25 21:58:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Force a refresh after loading terrain data so
	  that it gets displayed right away.

Thu Jun 25 05:16:10 GMT 2015  Olly Betts <olly@survex.com>

	* lib/icons/Makefile.am: Fix install directories for filetype icons.
